# plantuml-telegram

./: pyproject.toml
src/: clients.py  config.py  handlers.py  main.py  uml.py
