[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["AstralMortem <chaliukvladyslav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.18.0"
plantuml = "^0.3.0"
six = "^1.17.0"
aiohttp = "^3.11.12"
fastapi = "^0.115.8"
unicorn = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
